fix: add scrollbar to twitter cards (#55)
* fix: add scrollbar to twitter cards

* fix: remove vertical scrollbar from twitter cards

--- a/themes/hugo-theme-ephemeralenvironments/static/css/base.css
+++ b/themes/hugo-theme-ephemeralenvironments/static/css/base.css
@@ -1,5 +1,5 @@
 /* Base Styles */
-@import url('https://fonts.googleapis.com/css2?family=Recursive:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Recursive:wght@400;500;600;700&display=swap");
 
 * {
   list-style: none;
@@ -1027,13 +1027,9 @@ a.muted:active {
 #twtr-scroll {
   width: 100%;
   height: 100%;
-  overflow: scroll;
-  scrollbar-width: none;
+  overflow-x: scroll;
+  scrollbar-width: thin;
   -webkit-overflow-scrolling: touch;
-}
-
-#twtr-scroll::-webkit-scrollbar {
-  display: none;
 }
 
 #twtr-content {
@@ -1118,7 +1114,6 @@ a.muted:active {
   left: 130px;
   position: absolute;
   font-family: "Recursive", medium;
-
 }
 
 .hiring {
@@ -1152,11 +1147,10 @@ a.muted:active {
   margin-left: 10%;
   margin-right: 10%;
   margin-bottom: 30px;
-
 }
 .subscription-box input {
   width: 70%;
-  margin-right:1%;
+  margin-right: 1%;
   margin-left: 3%;
 }
 .subscription-box button {
@@ -1166,18 +1160,20 @@ a.muted:active {
 }
 
 .subscription-form fieldset {
-    font-size: 1em;
-    padding: 0.5em;
-    border-radius: 1em;
-    margin-bottom: 20%;
-    margin-top: 40%;
-    margin-left: 40%;
+  font-size: 1em;
+  padding: 0.5em;
+  border-radius: 1em;
+  margin-bottom: 20%;
+  margin-top: 40%;
+  margin-left: 40%;
 }
 
-.subscription-form label, input, button {
-    font-size: inherit;
-    margin: 0.1em 0.2em;
-    -moz-box-sizing: content-box;
-    -webkit-box-sizing: content-box;
-    box-sizing: content-box;
+.subscription-form label,
+input,
+button {
+  font-size: inherit;
+  margin: 0.1em 0.2em;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
 }
